add prefix NEWTOPLINE for all classes

--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -7,11 +7,11 @@ block variables
   - var breadcrumbs     = 'breadcrumbs link'
 
 block content
-  .main-wrap.no-js
+  .newtopline-main-wrap.no-js
     include ../sections/gradient-section
 
     //begin content
-    main.main.index
+    main.newtopline-main.newtopline-index
       include ../sections/header
       include ../sections/top-section
       include ../sections/index-info
