--- a/src/pug/pages/subscribe.pug
+++ b/src/pug/pages/subscribe.pug
@@ -7,89 +7,89 @@ block variables
   - var breadcrumbs     = 'breadcrumbs link'
 
 block content
-  .main-wrap.no-js
+  .newtopline-main-wrap.no-js
     include ../sections/gradient-section
 
     //begin content
-    main.main.subscribe
+    main.newtopline-main.newtopline-subscribe
       include ../sections/header
-      .container
+      .newtopline-container
 
         //begin subscribe__info
-        .subscribe__info.subscribe-info
-          .subscribe-info__left
-            h2.subscribe-info__title <span>Подписывайтесь</span> на еженедельные новости компании «TOPLINE»
-            ul.subscribe-info__list.custom-ul
+        .newtopline-subscribe__info.newtopline-subscribe-info
+          .newtopline-subscribe-info__left
+            h2.newtopline-subscribe-info__title <span>Подписывайтесь</span> на еженедельные новости компании «TOPLINE»
+            ul.newtopline-subscribe-info__list.newtopline-custom-ul
               li Дайджест публикаций
               li Изменения в законодательствах
               li Экспертные обзора и разборы ситуаций
-            button.subscribe-info__btn.btn Подписаться
-          .subscribe-info__pic
+            button.newtopline-subscribe-info__btn.newtopline-btn Подписаться
+          .newtopline-subscribe-info__pic
             img(src="assets/img/subscribe.svg" alt="picture")
         //end subscribe__info
 
         //begin subscribe__links
-        .subscribe__links.subscribe-links
+        .newtopline-subscribe__links.newtopline-subscribe-links
           //begin subscribe-links-block
-          .subscribe-links-block
-            h3.subscribe-links-block__title Соцсети Натальи Ненашевой:
-            ul.subscribe-links__list
-              li.subscribe-links__item
-                a(href="https://1topline.ru/stati/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+          .newtopline-subscribe-links-block
+            h3.newtopline-subscribe-links-block__title Соцсети Натальи Ненашевой:
+            ul.newtopline-subscribe-links__list
+              li.newtopline-subscribe-links__item
+                a(href="https://1topline.ru/stati/" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-blog')
-                  span.subscribe-links__text Блог
+                  span.newtopline-subscribe-links__text Блог
 
-              li.subscribe-links__item
-                a(href="https://www.instagram.com/nenasheva_natalya/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+              li.newtopline-subscribe-links__item
+                a(href="https://www.instagram.com/nenasheva_natalya/" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-inst')
-                  span.subscribe-links__text Инстаграм
+                  span.newtopline-subscribe-links__text Инстаграм
 
-              li.subscribe-links__item
-                a(href="https://www.facebook.com/natalya.nenasheva.3" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+              li.newtopline-subscribe-links__item
+                a(href="https://www.facebook.com/natalya.nenasheva.3" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-fb')
-                  span.subscribe-links__text Facebook
+                  span.newtopline-subscribe-links__text Facebook
 
-              li.subscribe-links__item
-                a(href="https://www.youtube.com/watch?v=SztlUWd83ao&app=desktop" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+              li.newtopline-subscribe-links__item
+                a(href="https://www.youtube.com/watch?v=SztlUWd83ao&app=desktop" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-yt')
-                  span.subscribe-links__text Youtube-канал
+                  span.newtopline-subscribe-links__text Youtube-канал
           //end subscribe-links-block
 
           //begin subscribe-links-block
-          .subscribe-links-block
-            h3.subscribe-links-block__title Соцсети компании TOPLINE:
-            ul.subscribe-links__list
-              li.subscribe-links__item
-                a(href="https://www.instagram.com/topline.cc/" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+          .newtopline-subscribe-links-block
+            h3.newtopline-subscribe-links-block__title Соцсети компании TOPLINE:
+            ul.newtopline-subscribe-links__list
+              li.newtopline-subscribe-links__item
+                a(href="https://www.instagram.com/topline.cc/" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-inst')
-                  span.subscribe-links__text Инстаграм <span>TOPLINE</span>
+                  span.newtopline-subscribe-links__text Инстаграм <span>TOPLINE</span>
 
-              li.subscribe-links__item
-                a(href="https://www.facebook.com/topline.cc" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+              li.newtopline-subscribe-links__item
+                a(href="https://www.facebook.com/topline.cc" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-fb')
-                  span.subscribe-links__text Facebook <span>TOPLINE</span>
+                  span.newtopline-subscribe-links__text Facebook <span>TOPLINE</span>
 
-              li.subscribe-links__item
-                a(href="https://vk.com/public196282190" target="_blank" rel="nofollow noopener noreferrer").subscribe-links__link
-                  .subscribe-links__icon
+              li.newtopline-subscribe-links__item
+                a(href="https://vk.com/public196282190" target="_blank" rel="nofollow noopener noreferrer").newtopline-subscribe-links__link
+                  .newtopline-subscribe-links__icon
                     +svg('sub-vk')
-                  span.subscribe-links__text <span>TOPLINE</span> ВКонтакте
+                  span.newtopline-subscribe-links__text <span>TOPLINE</span> ВКонтакте
           //end subscribe-links-block
         //end subscribe__links
 
         //begin subscribe__videos
-        .subscribe__videos.subscribe-videos
-          .subscribe-videos__pic
+        .newtopline-subscribe__videos.newtopline-subscribe-videos
+          .newtopline-subscribe-videos__pic
             img(src="assets/img/subscribe-videos.png" alt="picture")
-          .subscribe-videos__text
-            h3.subscribe-videos__title <span>Подписывайтесь на Youtube канал Натальи Ненашевой </span> и смотрите новые видео каждую неделю!
-            a(href="#").subscribe-videos__btn
+          .newtopline-subscribe-videos__text
+            h3.newtopline-subscribe-videos__title <span>Подписывайтесь на Youtube канал Натальи Ненашевой </span> и смотрите новые видео каждую неделю!
+            a(href="#").newtopline-subscribe-videos__btn
               img(src="assets/img/youtube.png" alt="picture")
               span Перейти на YouTube-канал
         //end subscribe__videos
