--- a/src/pug/pages/thnx.pug
+++ b/src/pug/pages/thnx.pug
@@ -7,30 +7,30 @@ block variables
   - var breadcrumbs     = 'breadcrumbs link'
 
 block content
-  .main-wrap.no-js
+  .newtopline-main-wrap.no-js
     include ../sections/gradient-section
 
     //begin content
-    main.main.thnx
+    main.newtopline-main.newtopline-thnx
       include ../sections/header
-      .container
-        header.thnx__header
-          h2.thnx__title <span>Спасибо</span> за регистрацию!
+      .newtopline-container
+        header.newtopline-thnx__header
+          h2.newtopline-thnx__title <span>Спасибо</span> за регистрацию!
 
         //begin thnx__info
-        .thnx__info.thnx-info
-          .thnx-info__left
-            h3.thnx-info__title С вами свяжется специалист компании «TOPLINE»
-            .thnx-info__text
+        .newtopline-thnx__info.newtopline-thnx-info
+          .newtopline-thnx-info__left
+            h3.newtopline-thnx-info__title С вами свяжется специалист компании «TOPLINE»
+            .newtopline-thnx-info__text
               span Пока вы ожидаете звонка от специалиста, выберите дату и время диагностики в ближайшие понедельник, среду или пятницу
-            button.thnx-info__btn.btn Выбрать дату
-            h3.thnx-info__title В итоге вы:
-            ul.thnx-info__list.custom-ul
+            button.newtopline-thnx-info__btn.newtopline-btn Выбрать дату
+            h3.newtopline-thnx-info__title В итоге вы:
+            ul.newtopline-thnx-info__list.newtopline-custom-ul
               li Определите точки налоговых рисков для вашей компании
               li Получите план развития и карту скрытых рисков вашего бизнеса
               li Научитесь понимать своего бухгалтера и качественно проверять результаты его работы
               li Поймете, как правильно выстроить управленческий учет в компании
-          .thnx-info__pic
+          .newtopline-thnx-info__pic
             img(src="assets/img/thnx.svg" alt="picture")
         //end thnx__info
     //end content
