--- a/src/pug/sections/gradient-section.pug
+++ b/src/pug/sections/gradient-section.pug
@@ -1,5 +1,5 @@
 //begin gradient-sec
-.gradient-sec
-  .circle-01#circle-01
-  .circle-02#circle-02
+.newtopline-gradient-sec
+  .newtopline-circle-01#circle-01
+  .newtopline-circle-02#circle-02
 //end gradient-sec
