--- a/src/pug/sections/header.pug
+++ b/src/pug/sections/header.pug
@@ -1,8 +1,8 @@
 //begin header
-header.header#header
-  a(href="/").header__logo
+header.newtopline-header#header
+  a(href="/").newtopline-header__logo
     img(src="assets/img/logo.svg" alt="topline")
 
-  .header__info
+  .newtopline-header__info
     span <strong>Онлайн-диагностика для владельцев бизнеса</strong> от Натальи Ненашевой и команды экспертов «TOPLINE»
 //end header
