--- a/src/pug/sections/how-section.pug
+++ b/src/pug/sections/how-section.pug
@@ -1,155 +1,155 @@
 //begin how-sec
-.how-sec
-  .container
-    h2.how-sec__title.title <span>Как подготовить свой бизнес к 2021 году</span> и кто сможет получать банковскую / господдержку бизнеса?
-    h3.how-sec__subtitle Примеры успешного взаимодействия Натальи Ненашевой - <span>проблемы клиентов, которые были решены</span> после наших диагностик
-    .how-sec__subtitle-ps * Все совпадения в тексте – всего лишь текст. Мы работаем конфиденциально.
+.newtopline-how-sec
+  .newtopline-container
+    h2.newtopline-how-sec__title.newtopline-title <span>Как подготовить свой бизнес к 2021 году</span> и кто сможет получать банковскую / господдержку бизнеса?
+    h3.newtopline-how-sec__subtitle Примеры успешного взаимодействия Натальи Ненашевой - <span>проблемы клиентов, которые были решены</span> после наших диагностик
+    .newtopline-how-sec__subtitle-ps * Все совпадения в тексте – всего лишь текст. Мы работаем конфиденциально.
 
     //begin how-sec__accordion
-    .how-sec__accordion.how-accordion
+    .newtopline-how-sec__accordion.newtopline-how-accordion
       //begin how-accordion__item-01
-      .how-accordion__item
+      .newtopline-how-accordion__item
         //begin how-accordion__top
-        .how-accordion__top.how-accordion-top
-          .how-accordion-top__pic
+        .newtopline-how-accordion__top.newtopline-how-accordion-top
+          .newtopline-how-accordion-top__pic
             img(src="assets/img/how-01.svg" alt="picture")
-          .how-accordion-top__text
-            .how-accordion-top__numb История первая
-            h4.how-accordion-top__title Легализация офлайн-бизнеса и упаковка бизнеса с оптимальной налоговой нагрузкой
-          .how-accordion-top__btn
+          .newtopline-how-accordion-top__text
+            .newtopline-how-accordion-top__numb История первая
+            h4.newtopline-how-accordion-top__title Легализация офлайн-бизнеса и упаковка бизнеса с оптимальной налоговой нагрузкой
+          .newtopline-how-accordion-top__btn
         //end how-accordion__top
 
         //begin how-accordion__body
-        .how-accordion__body
+        .newtopline-how-accordion__body
           //begin how-accordion__step-01
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Точка А
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Точка А
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Точка А
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Точка А
+              .newtopline-how-accordion__step-right-text
                 span Компания по танцам развивала сеть в Москве.<br>Задумалась о легализации и масштабировании бизнеса, обратилась в компанию «TOPLINE».
-              .how-accordion__step-right-title Что было в процессе:
-              .how-accordion__step-right-text
+              .newtopline-how-accordion__step-right-title Что было в процессе:
+              .newtopline-how-accordion__step-right-text
                 span <i>Обелили ФОТ, создали необходимое количество операционных  участников бизнеса, интегрировали онлайн-кассы, платёжные системы. Самой актуальной проблемой было не попасть под  легальное дробление бизнеса. Спланировали разумную налоговую нагрузку. Обелили все доходы и расходы.</i>
           //end how-accordion__step-01
 
           //begin how-accordion__step-02
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Точка Б
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Точка Б
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Точка Б
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Точка Б
+              .newtopline-how-accordion__step-right-text
                 span «TOPLINE» занялся ликвидацией тех признаков, которые позволили бы обвинить предпринимателя в необоснованном дроблении бизнеса и умышленном уходе от налогов. Мы развели финансовые потоки. Обелили договора аренды. Поставили сеть на путь упаковки франшизы, что является очень хорошим решением для бизнеса с такой спецификой.
           //end how-accordion__step-02
 
           //begin how-accordion__step-result
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Результат
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Результат
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Результат
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Результат
+              .newtopline-how-accordion__step-right-text
                 span <strong>Теперь у нашего заказчика учитывается выручка, реализована торговля товарами через агентскую схему, внедрены элементы в виде ИП на патенте, отлажена работа касс. Бизнес готов к легальному масштабированию.</strong>
           //end how-accordion__step-result
         //end how-accordion__body
       //end how-accordion__item-01
 
       //begin how-accordion__item-02
-      .how-accordion__item
+      .newtopline-how-accordion__item
         //begin how-accordion__top
-        .how-accordion__top.how-accordion-top
-          .how-accordion-top__pic
+        .newtopline-how-accordion__top.newtopline-how-accordion-top
+          .newtopline-how-accordion-top__pic
             img(src="assets/img/how-02.svg" alt="picture")
-          .how-accordion-top__text
-            .how-accordion-top__numb История вторая
-            h4.how-accordion-top__title Кредитный тюнинг
-          .how-accordion-top__btn
+          .newtopline-how-accordion-top__text
+            .newtopline-how-accordion-top__numb История вторая
+            h4.newtopline-how-accordion-top__title Кредитный тюнинг
+          .newtopline-how-accordion-top__btn
         //end how-accordion__top
 
         //begin how-accordion__body
-        .how-accordion__body
+        .newtopline-how-accordion__body
           //begin how-accordion__step-01
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Точка А
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Точка А
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Точка А
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Точка А
+              .newtopline-how-accordion__step-right-text
                 span Бизнесу требовались серьёзные денежные вливания, а банки отказывали в выдаче кредитов. Приходилось брать валютные займы у частных инвесторов. Проценты по ним были так высоки, что съедали почти всю прибыль. Единственным путём повышения маржинальности было кредитование в банках под «нормальную» ставку в 10-12 % годовых в рублях вместо 30 % в долларах. Нужно было преобразить компанию, повысить ее инвестиционную привлекательность в глазах банка.
-              .how-accordion__step-right-title Что было в процессе:
-              .how-accordion__step-right-text
+              .newtopline-how-accordion__step-right-title Что было в процессе:
+              .newtopline-how-accordion__step-right-text
                 span <i>Пересмотрели учётную политику, сделали восстановление бухгалтерского учёта, провели инвентаризацию активов и задолженностей, в том числе с аффилированными лицами. Сформировали добавочный капитал и резервы. Улучшили структуру бухгалтерской отчётности.</i>
           //end how-accordion__step-01
 
           //begin how-accordion__step-02
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Точка Б
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Точка Б
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Точка Б
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Точка Б
+              .newtopline-how-accordion__step-right-text
                 span «TOPLINE» сформировал именно инвестиционно-привлекательную отчётность для потенциальных кредиторов.
                 span Подчистили плохое наследие. Начали внедрять рекомендации, которые касаются уже не бухгалтерского, а управленческого учёта, то есть ставить позаказный метод, раздельный учёт выручки, рекомендации по планированию и правильной организации закупки материалов в привязке к разным объектам. Работа по такому отлаживанию бухучета сверхважна для любого бизнеса.
           //end how-accordion__step-02
 
           //begin how-accordion__step-result
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Результат
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Результат
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Результат
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Результат
+              .newtopline-how-accordion__step-right-text
                 span <strong>Банки начали по-другому относиться к кредитным заявкам клиента, одобрили крупные займы. Бизнес получил финансовые вливания, необходимые для дальнейшего развития под 12 % годовых.</strong>
           //end how-accordion__step-result
         //end how-accordion__body
       //end how-accordion__item-02
 
       //begin how-accordion__item-03
-      .how-accordion__item
+      .newtopline-how-accordion__item
         //begin how-accordion__top
-        .how-accordion__top.how-accordion-top
-          .how-accordion-top__pic
+        .newtopline-how-accordion__top.newtopline-how-accordion-top
+          .newtopline-how-accordion-top__pic
             img(src="assets/img/how-03.svg" alt="picture")
-          .how-accordion-top__text
-            .how-accordion-top__numb История третья
-            h4.how-accordion-top__title Дробление бизнеса ввиду перехода из офлайна в онлайн и упаковка бизнеса с оптимальной налоговой нагрузкой
-          .how-accordion-top__btn
+          .newtopline-how-accordion-top__text
+            .newtopline-how-accordion-top__numb История третья
+            h4.newtopline-how-accordion-top__title Дробление бизнеса ввиду перехода из офлайна в онлайн и упаковка бизнеса с оптимальной налоговой нагрузкой
+          .newtopline-how-accordion-top__btn
         //end how-accordion__top
 
         //begin how-accordion__body
-        .how-accordion__body
+        .newtopline-how-accordion__body
           //begin how-accordion__step-01
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Точка А
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Точка А
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Точка А
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Точка А
+              .newtopline-how-accordion__step-right-text
                 span Крупная компания, которая занимается интернет-торговлей, существенно увеличила свои доходы во время пандемии. Однако рост выручки принёс и новые проблемы: клиент приблизился к лимиту в 150 млн ₽ и рисковал лишиться права на применение УСН.
-              .how-accordion__step-right-title Что было в процессе:
-              .how-accordion__step-right-text
+              .newtopline-how-accordion__step-right-title Что было в процессе:
+              .newtopline-how-accordion__step-right-text
                 span <i>Клиент пытался решить проблему своими силами. Но наделал ошибок – своими же управленческими решениями подставил себя под обвинения в необоснованном дроблении бизнеса. Регистрация новых юрлиц на имя родственников и аффилированных топ-менеджеров, грубые попытки «развести» выручку по этим фирмам. «Оптимизация» была настолько явственной, что риск разбирательств с ФНС, многомиллионных налоговых доначисленией, пени и штрафов очень увеличился.</i>
           //end how-accordion__step-01
 
           //begin how-accordion__step-02
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Точка Б
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Точка Б
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Точка Б
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Точка Б
+              .newtopline-how-accordion__step-right-text
                 span «TOPLINE» создал под клиента специальную схему тонкого разведения финансовых и товарных потоков. Шаги по дифференциации денежных поступлений от бизнеса оказались абсолютно легальны, а в основе схемы были ноу-хау, базирующиеся на компетенциях наших экспертов. Мы дали инструмент, позволяющий проводить дробление в законных, дозволенных рамках.
           //end how-accordion__step-02
 
           //begin how-accordion__step-result
-          .how-accordion__step
-            .how-accordion__step-left
-              .how-accordion__step-left-text Результат
-            .how-accordion__step-right
-              .how-accordion__step-right-title-mobile Результат
-              .how-accordion__step-right-text
+          .newtopline-how-accordion__step
+            .newtopline-how-accordion__step-left
+              .newtopline-how-accordion__step-left-text Результат
+            .newtopline-how-accordion__step-right
+              .newtopline-how-accordion__step-right-title-mobile Результат
+              .newtopline-how-accordion__step-right-text
                 span <strong>Изменили модель ведения бизнеса, в результате исчезла угроза превышения лимитов по выручке. Сохранилась возможность платить налоги по УСН. Клиент получил возможность быстро масштабировать бизнес и при этом оказался застрахован от налоговых доначислений, штрафов и иных санкций от ФНС.</strong>
           //end how-accordion__step-result
         //end how-accordion__body
