--- a/src/pug/sections/top-section.pug
+++ b/src/pug/sections/top-section.pug
@@ -1,36 +1,36 @@
 //begin top-sec
-.top-sec
-  .container
-    h2.top-sec__title.title Пройдите тест за 5 минут, пообщайтесь со специалистом и через 60 минут <span>получите карту развития и скрытых рисков вашего бизнеса</span>
+.newtopline-top-sec
+  .newtopline-container
+    h2.newtopline-top-sec__title.newtopline-title Пройдите тест за 5 минут, пообщайтесь со специалистом и через 60 минут <span>получите карту развития и скрытых рисков вашего бизнеса</span>
 
     //begin top-sec-info
-    .top-sec__info.top-sec-info
+    .newtopline-top-sec__info.newtopline-top-sec-info
       //begin top-sec-info__left
-      .top-sec-info__left
-        .top-sec-info__ps Получите бесплатно онлайн-диагностику от профессионалов по финансам, налогам, бухгалтерским и юридическим вопросам
-        a(href="#form-sec").top-sec-info__btn.btn.scroll-link Записаться на онлайн-диагностику
-        h3.top-sec-info__title И узнайте, как:
-        ul.top-sec-info__list
-          li.top-sec-info__item Вести бизнес без обвинений налогового органа в его дроблении
-          li.top-sec-info__item Безболезненно «обелить» свой бизнес
-          li.top-sec-info__item Избежать штрафов от ФНС РФ и блокировок счета в рамках закона № 115-ФЗ
-          li.top-sec-info__item Критерии для получения бизнес-кредитов, госконтрактов, участия в тендерах
-          li.top-sec-info__item Попасть в группу льготного налогообложения IT-бизнеса
-          li.top-sec-info__item Не купить «кота в мешке» при покупке бизнеса
-          li.top-sec-info__item Обезопасить себя при продаже бизнеса
-          li.top-sec-info__item Какую систему налогообложения выбрать, после отмены ЕНВД
+      .newtopline-top-sec-info__left
+        .newtopline-top-sec-info__ps Получите бесплатно онлайн-диагностику от профессионалов по финансам, налогам, бухгалтерским и юридическим вопросам
+        a(href="#form-sec").newtopline-top-sec-info__btn.newtopline-btn.newtopline-scroll-link Записаться на онлайн-диагностику
+        h3.newtopline-top-sec-info__title И узнайте, как:
+        ul.newtopline-top-sec-info__list
+          li.newtopline-top-sec-info__item Вести бизнес без обвинений налогового органа в его дроблении
+          li.newtopline-top-sec-info__item Безболезненно «обелить» свой бизнес
+          li.newtopline-top-sec-info__item Избежать штрафов от ФНС РФ и блокировок счета в рамках закона № 115-ФЗ
+          li.newtopline-top-sec-info__item Критерии для получения бизнес-кредитов, госконтрактов, участия в тендерах
+          li.newtopline-top-sec-info__item Попасть в группу льготного налогообложения IT-бизнеса
+          li.newtopline-top-sec-info__item Не купить «кота в мешке» при покупке бизнеса
+          li.newtopline-top-sec-info__item Обезопасить себя при продаже бизнеса
+          li.newtopline-top-sec-info__item Какую систему налогообложения выбрать, после отмены ЕНВД
       //end top-sec-info__left
 
       //begin top-sec-info__right
-      .top-sec-info__right
-        .top-sec-info__pic
+      .newtopline-top-sec-info__right
+        .newtopline-top-sec-info__pic
           img(src="assets/img/top-sec.svg" alt="picture")
       //end top-sec-info__right
     //end top-sec-info
 
     //begin top-sec-footer
-    .top-sec__footer.top-sec-footer
-      a(href="#index-info").top-sec-footer__link.scroll-link
+    .newtopline-top-sec__footer.newtopline-top-sec-footer
+      a(href="#index-info").newtopline-top-sec-footer__link.newtopline-scroll-link
         |Узнать подробнее
         +svg('arr-down')
     //end top-sec-footer
