--- a/src/pug/elements/popup.pug
+++ b/src/pug/elements/popup.pug
@@ -1,35 +1,35 @@
-.popup__layer#popup__layer
+.newtopline-popup__layer#popup__layer
 
 //begin popup-01
-.popup#popup-01
-  .popup__close
+.newtopline-popup#popup-01
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вы опасаетесь обвинений в незаконном дроблении бизнеса
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вы опасаетесь обвинений в незаконном дроблении бизнеса
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li У вас выручка подошла к лимиту по УСН 150 млн руб.
       li Ваш бизнес осуществляется группой аффилированных физических и юридических лиц, формальные отношения между которыми выстроены с целью минимизации налогов, а неформальные отношения построены на родственных или дружеских связях с лицами, пользующимися вашим доверием.
       li Распределение функций и бизнес-процессов между членами группы не имеет логической деловой мотивации, отсутствует формальная экономическая обоснованность сделок.
       li В группе имеет место совместное использование трудовых, материальных, финансовых ресурсов основного участника.
       li  Участники схемы разделяются на центры формирования прибыли и центры формирования затрат с помощью контролируемого распределения выручки.
       li При формально-юридической независимости члены группы фактически не самостоятельны, управленческие решения принимаются одним членом группы, который и осуществляет реальный контроль за их исполнением.
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-01
 
 //begin popup-02
-.popup#popup-02
-  .popup__close
+.newtopline-popup#popup-02
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вам нужно безболезненно, быстро, надёжно «обелить» имеющийся бизнес, чтобы избежать внимания со стороны налогового органа
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вам нужно безболезненно, быстро, надёжно «обелить» имеющийся бизнес, чтобы избежать внимания со стороны налогового органа
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li Мы поможем избежать блокировки счетов.
       li Вы ИП и денежные средства поступают на вашу карту.
       li Вы хотите уменьшить налоговую базу.
@@ -39,98 +39,98 @@
       li Расскажем, как организовать учёт ТМЦ при отсутствии складов.
       li Организуем учёт так, чтобы пресечь воровство сотрудников компании.
       li Деньги компании = мои деньги = общая касса.
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-02
 
 //begin popup-03
-.popup#popup-03
-  .popup__close
+.newtopline-popup#popup-03
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вы получили штраф или блокировку расчётного счета от ФНС или в рамках действия закона № 115-ФЗ
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вы получили штраф или блокировку расчётного счета от ФНС или в рамках действия закона № 115-ФЗ
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li Поможем разблокировать счета в рамках действия закона № 115-ФЗ.
       li Работа с недобросовестными поставщиками и контрагентами.
       li Подготовим ответы на запросы банка по поводу предоставления документов по закону № 115-ФЗ.
       li Организуем оперативный бухгалтерский и налоговый учёт, позволяющий быстро отвечать на запросы банка.
       li Постоянно растущая кредиторская задолженность.
       li Поможем избавиться от «бумажного» затоваривания складов.
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-03
 
 //begin popup-04
-.popup#popup-04
-  .popup__close
+.newtopline-popup#popup-04
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вы готовы привлечь кредитные деньги в компанию. Банки СЕЙЧАС отказывают вашей компании
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вы готовы привлечь кредитные деньги в компанию. Банки СЕЙЧАС отказывают вашей компании
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li Вы вынуждены «обслуживать» дорогие частные кредиты под 20 % и более.
       li Вся прибыль бизнеса уходит на погашение процентов по кредитам.
       li Изучив представленную бухгалтерскую отчётность, банки отказывают в выдаче кредитов.
       li Отсутствие залогов, активов на балансе компании и, как следствие, отсутствие кредитов.
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-04
 
 //begin popup-05
-.popup#popup-05
-  .popup__close
+.newtopline-popup#popup-05
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вы исполнитель в госконтрактах и/или планируете участие в тендерах
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вы исполнитель в госконтрактах и/или планируете участие в тендерах
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li Выиграли крупный контракт и возникли проблемы с постановкой учёта.
       li Расскажем, как работать с казначейскими счетами.
       li Предотвратим сложности с переводом средств с казначейских счетов на расчётные счета.
       li Проверим правильность сформированных отчётов об использовании бюджетных средств.
       li Расскажем, как оформить документы для участия в тендерах, чтобы вас не отклоняли по формальному признаку – из-за низкого качества предоставляемых документов.
       li Поможем подготовиться к проверке счётной палаты в части целевого использования бюджетных средств.
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-05
 
 //begin popup-06
-.popup#popup-06
-  .popup__close
+.newtopline-popup#popup-06
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вы спрашиваете, как попасть в группу льготного налогообложения IT-бизнеса
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вы спрашиваете, как попасть в группу льготного налогообложения IT-бизнеса
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li Поможем попасть в реестр отечественного программного обеспечения и реестр IT-компаний.
       li Мы знаем, как разобраться с реестрами IT-компаний (какие включаются, какие НЕ включаются в реестр).
       li Поможем не платить НДС с продажи созданного вами программного обеспечения.
       li Поможем выбрать оптимальный режим налогообложения для юрлиц, создающих и продающих ПО.
       li Расскажем, как легализовать фонд оплаты труда.
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-06
 
 //begin popup-07
-.popup#popup-07
-  .popup__close
+.newtopline-popup#popup-07
+  .newtopline-popup__close
     +svg('close')
 
   //begin popup__header
-  .popup__header
-    h2.popup__title Вы продаете/покупаете бизнес и желаете проверить «КОТА В МЕШКЕ». Вам необходим квалифицированный, опытный советник в лице Натальи Ненашевой
+  .newtopline-popup__header
+    h2.newtopline-popup__title Вы продаете/покупаете бизнес и желаете проверить «КОТА В МЕШКЕ». Вам необходим квалифицированный, опытный советник в лице Натальи Ненашевой
 
-  .popup__body
-    ul.popup__list
+  .newtopline-popup__body
+    ul.newtopline-popup__list
       li Проведём проверку и поможем не переплачивать при покупке готового бизнеса.
       li Подготовим отчётность, чтобы не продешевить при продаже готового бизнеса.
       li Подготовим расчёт, насколько быстро вы сможете вернуть вложения в новый бизнес.
@@ -139,6 +139,6 @@
       li Поможем правильно прочитать управленческую отчётность.
       li Оценим приобретаемую долю бизнеса.
       li Рассчитаем стоимость чистых активов
-    a(href="#form-sec").popup__btn.btn.scroll-link Записаться на диагностику
+    a(href="#form-sec").newtopline-popup__btn.newtopline-btn.newtopline-scroll-link Записаться на диагностику
   //end popup__header
 //end popup-07
