--- a/src/pug/sections/footer.pug
+++ b/src/pug/sections/footer.pug
@@ -1,34 +1,34 @@
 //begin footer
-.footer
-  .container
+.newtopline-footer
+  .newtopline-container
     //begin footer__left
-    .footer__left
-      a(href="#").footer__logo
+    .newtopline-footer__left
+      a(href="#").newtopline-footer__logo
         img(src="assets/img/logo-footer.svg" alt="picture")
       span ООО Консалтинговая компания «TOPLINE». Все права защищены. © 2007-2020
       span Запрещено использование материалов сайта без согласия его авторов и обратной ссылки.
     //end footer__left
       
     //begin footer__right
-    .footer__right
-      a(href="tel:88003508108").footer__phone 8 (800) 350-81-08
-      a(href="mailto:info@1topline.ru").footer__mail info@1topline.ru
-      ul.footer__social.footer-social__list
-        li.footer-social__item
-          a(href="https://www.facebook.com/topline.cc" target="_blank").footer-social__link
+    .newtopline-footer__right
+      a(href="tel:88003508108").newtopline-footer__phone 8 (800) 350-81-08
+      a(href="mailto:info@1topline.ru").newtopline-footer__mail info@1topline.ru
+      ul.newtopline-footer__social.newtopline-footer-social__list
+        li.newtopline-footer-social__item
+          a(href="https://www.facebook.com/topline.cc" target="_blank").newtopline-footer-social__link
             img(src="assets/img/fb.png" alt="picture")
-        li.footer-social__item
-          a(href="https://www.instagram.com/topline.cc/" target="_blank").footer-social__link
+        li.newtopline-footer-social__item
+          a(href="https://www.instagram.com/topline.cc/" target="_blank").newtopline-footer-social__link
             img(src="assets/img/inst.png" alt="picture")
-        li.footer-social__item
+        li.newtopline-footer-social__item
           //-a(href="https://zen.yandex.ru/id/5be98a28d6751400ab789a5e" target="_blank").footer-social__link
-          a(href="#" target="_blank").footer-social__link
+          a(href="#" target="_blank").newtopline-footer-social__link
             img(src="assets/img/zen.png" alt="picture")
-        li.footer-social__item
-          a(href="https://vk.com/public196282190" target="_blank").footer-social__link
+        li.newtopline-footer-social__item
+          a(href="https://vk.com/public196282190" target="_blank").newtopline-footer-social__link
             img(src="assets/img/vk.png" alt="picture")
-        li.footer-social__item
-          a(href="#" target="_blank").footer-social__link
+        li.newtopline-footer-social__item
+          a(href="#" target="_blank").newtopline-footer-social__link
             img(src="assets/img/whatsapp.png" alt="picture")
     //end footer__right
 //end footer
