--- a/src/pug/sections/form-section.pug
+++ b/src/pug/sections/form-section.pug
@@ -1,26 +1,26 @@
 //begin form-sec
-.form-sec#form-sec
-  .container
-    h2.form-sec__title Запишитесь на диагностику и узнайте, как защитить ваш бизнес и подготовить к изменениям 2021 года
+.newtopline-form-sec#form-sec
+  .newtopline-container
+    h2.newtopline-form-sec__title Запишитесь на диагностику и узнайте, как защитить ваш бизнес и подготовить к изменениям 2021 года
     //begin form-sec__row
-    .form-sec__row
-      .form-sec__info
-        h3.form-sec__info-title После диагностики вашего бизнеса вы:
-        ul.form-sec__info-list
+    .newtopline-form-sec__row
+      .newtopline-form-sec__info
+        h3.newtopline-form-sec__info-title После диагностики вашего бизнеса вы:
+        ul.newtopline-form-sec__info-list
           li Определите точки налоговых рисков для вашей компании
           li Получите план развития и карту скрытых рисков вашего бизнеса
           li Научитесь понимать своего бухгалтера и качественно проверять результаты его работы
           li Поймёте, как правильно выстроить управленческий учёт в компании
-        .form-sec__info-ps + Получите дорожную карту развития вашего бизнеса
-      .form-sec__pic
+        .newtopline-form-sec__info-ps + Получите дорожную карту развития вашего бизнеса
+      .newtopline-form-sec__pic
         img(src="assets/img/form-img.png" alt="picture")
     //end form-sec__row
 
     //begin form-sec__form
-    form.form-sec__form.form-sec-form
-      input(type="text" placeholder="Ваше имя").form-sec-form__input
-      input(type="email" placeholder="Email").form-sec-form__input
-      input(type="text" placeholder="Телефон").form-sec-form__input
-      input(type="submit" value="Записаться на диагностику").form-sec-form__submit
+    form.newtopline-form-sec__form.newtopline-form-sec-form
+      input(type="text" placeholder="Ваше имя").newtopline-form-sec-form__input
+      input(type="email" placeholder="Email").newtopline-form-sec-form__input
+      input(type="text" placeholder="Телефон").newtopline-form-sec-form__input
+      input(type="submit" value="Записаться на диагностику").newtopline-form-sec-form__submit
     //end form-sec__form
 //end form-sec
