--- a/src/style/elements/_popup.scss
+++ b/src/style/elements/_popup.scss
@@ -1,4 +1,4 @@
-.popup__layer {
+.newtopline-popup__layer {
   position: fixed;
   z-index: 99;
   top: 0;
@@ -10,7 +10,7 @@
   background-color: #1e1e1e;
 }
 
-.popup {
+.newtopline-popup {
   position: fixed;
   z-index: 100;
   top: 0;
@@ -33,12 +33,12 @@
   @include max(560) {
     padding: 80px 25px 70px 25px;
   }
-  &.active {
+  &.newtopline-active {
     transform: translateX(0);
   }
 }
 
-.popup__close {
+.newtopline-popup__close {
   position: absolute;
   z-index: 1;
   top: 40px;
@@ -64,7 +64,7 @@
   }
 }
 
-.popup__title {
+.newtopline-popup__title {
   font-weight: 800;
   line-height: 1.4;
   margin-bottom: 50px;
@@ -73,7 +73,7 @@
   @include responsive-font(25, 20);
 }
 
-.popup__list {
+.newtopline-popup__list {
   margin: 0 0 50px 0;
   padding: 0;
   li {
@@ -99,7 +99,7 @@
   }
 }
 
-.popup__btn {
+.newtopline-popup__btn {
   width: 100%;
   max-width: 350px;
   margin-bottom: 30px;
