--- a/src/style/sections/_how-section.scss
+++ b/src/style/sections/_how-section.scss
@@ -1,4 +1,4 @@
-.how-sec {
+.newtopline-how-sec {
   position: relative;
   padding-top: 95px;
   padding-bottom: 65px;
@@ -9,7 +9,7 @@
   }
 }
 
-.how-sec__title {
+.newtopline-how-sec__title {
   margin-bottom: 55px;
   text-align: center;
   span {
@@ -17,7 +17,7 @@
   }
 }
 
-.how-sec__subtitle {
+.newtopline-how-sec__subtitle {
   font-size: 20px;
   font-weight: 300;
   line-height: 1.5;
@@ -27,7 +27,7 @@
   color: #1e1e1e;
 }
 
-.how-sec__subtitle-ps {
+.newtopline-how-sec__subtitle-ps {
   font-size: 11px;
   font-weight: 300;
   max-width: 500px;
@@ -37,12 +37,12 @@
 }
 
 //begin #ACCORDION
-.how-accordion {
+.newtopline-how-accordion {
   margin-bottom: 60px;
 }
 
 //begin #TOP
-.how-accordion-top {
+.newtopline-how-accordion-top {
   display: flex;
   padding: 70px 0 58px 0;
   cursor: pointer;
@@ -51,16 +51,16 @@
   @include max(767) {
     padding: 40px 0 28px 0;
   }
-  &.active {
-    .how-accordion-top__btn::before {
+  &.newtopline-active {
+    .newtopline-how-accordion-top__btn::before {
       transform: rotate(0);
     }
   }
 }
 
-.how-accordion__item {
+.newtopline-how-accordion__item {
   &:first-child {
-    .how-accordion__body {
+    .newtopline-how-accordion__body {
       display: block;
     }
   }
@@ -69,7 +69,7 @@
   }
 }
 
-.how-accordion-top__pic {
+.newtopline-how-accordion-top__pic {
   display: flex;
   align-items: flex-start;
   flex: none;
@@ -91,11 +91,11 @@
   }
 }
 
-.how-accordion-top__text {
+.newtopline-how-accordion-top__text {
   width: 100%;
 }
 
-.how-accordion-top__numb {
+.newtopline-how-accordion-top__numb {
   font-size: 12px;
   font-weight: 300;
   margin-bottom: 15px;
@@ -105,7 +105,7 @@
   color: #1e1e1e;
 }
 
-.how-accordion-top__title {
+.newtopline-how-accordion-top__title {
   font-weight: 800;
   line-height: 1.4;
   max-width: 870px;
@@ -115,7 +115,7 @@
   @include responsive-font(25, 20);
 }
 
-.how-accordion-top__btn {
+.newtopline-how-accordion-top__btn {
   position: relative;
   flex: none;
   width: 30px;
@@ -145,7 +145,7 @@
 //end #TOP
 
 //begin #BODY
-.how-accordion__body {
+.newtopline-how-accordion__body {
   z-index: 1;
   display: none;
   padding-bottom: 23px;
@@ -156,13 +156,13 @@
   }
 }
 
-.how-accordion__step {
+.newtopline-how-accordion__step {
   display: flex;
   &:last-child {
-    .how-accordion__step-left {
+    .newtopline-how-accordion__step-left {
       border-right: 2px solid transparent;
     }
-    .how-accordion__step-left {
+    .newtopline-how-accordion__step-left {
       &::before {
         background-color: #8a2c5b;
         background-image: url('../img/check.png');
@@ -176,7 +176,7 @@
   }
 }
 
-.how-accordion__step-left {
+.newtopline-how-accordion__step-left {
   position: relative;
   flex: none;
   width: 240px;
@@ -218,7 +218,7 @@
   }
 }
 
-.how-accordion__step-left-text {
+.newtopline-how-accordion__step-left-text {
   font-size: 20px;
   font-weight: 500;
   line-height: 25px;
@@ -229,7 +229,7 @@
   }
 }
 
-.how-accordion__step-right {
+.newtopline-how-accordion__step-right {
   padding-left: 80px;
 
   @include max(1000) {
@@ -237,7 +237,7 @@
   }
 }
 
-.how-accordion__step-right-title-mobile {
+.newtopline-how-accordion__step-right-title-mobile {
   font-size: 20px;
   font-weight: 500;
   line-height: 25px;
@@ -250,7 +250,7 @@
   }
 }
 
-.how-accordion__step-right-text {
+.newtopline-how-accordion__step-right-text {
   margin-bottom: 50px;
 
   @include max(767) {
@@ -268,7 +268,7 @@
   }
 }
 
-.how-accordion__step-right-title {
+.newtopline-how-accordion__step-right-title {
   font-size: 20px;
   font-weight: 800;
   line-height: 1.25;
