--- a/src/style/sections/_index-info.scss
+++ b/src/style/sections/_index-info.scss
@@ -1,4 +1,4 @@
-.index-info {
+.newtopline-index-info {
   position: relative;
   padding-top: 75px;
   padding-bottom: 80px;
@@ -7,13 +7,13 @@
   background-position: 50% 100%;
 }
 
-.index-info__list {
+.newtopline-index-info__list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.index-info__title-item {
+.newtopline-index-info__title-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -28,13 +28,13 @@
   }
 }
 
-.index-info__title {
+.newtopline-index-info__title {
   span {
     display: block;
   }
 }
 
-.index-info-item {
+.newtopline-index-info-item {
   display: flex;
   width: calc(50% - 15px);
   min-height: 300px;
@@ -55,7 +55,7 @@
   }
   &:hover {
     box-shadow: 0 20px 30px rgba(138, 44, 91, .08);
-    .index-info-item__link-btn {
+    .newtopline-index-info-item__link-btn {
       background-color: #4e2d5e;
       &::before,
       &::after {
@@ -65,7 +65,7 @@
   }
 }
 
-.index-info-item__info {
+.newtopline-index-info-item__info {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -76,7 +76,7 @@
   }
 }
 
-.index-info-item__text {
+.newtopline-index-info-item__text {
   font-weight: 500;
   line-height: 1.65;
   display: flex;
@@ -89,12 +89,12 @@
   @include responsive-font(17, 15);
 }
 
-.index-info-item__link {
+.newtopline-index-info-item__link {
   display: flex;
   align-items: center;
 }
 
-.index-info-item__link-btn {
+.newtopline-index-info-item__link-btn {
   position: relative;
   flex: none;
   width: 31px;
@@ -122,13 +122,13 @@
   }
 }
 
-.index-info-item__link-text {
+.newtopline-index-info-item__link-text {
   font-size: 12px;
   font-weight: bold;
   color: #4e2d5e;
 }
 
-.index-info-item__pic {
+.newtopline-index-info-item__pic {
   display: flex;
   justify-content: flex-end;
   align-items: center;
