--- a/src/style/sections/_teacher-section.scss
+++ b/src/style/sections/_teacher-section.scss
@@ -1,14 +1,14 @@
-.teacher-sec {
+.newtopline-teacher-sec {
   position: relative;
   padding-top: 25px;
 }
 
-.teacher-sec__header {
+.newtopline-teacher-sec__header {
   margin-bottom: 50px;
   text-align: center;
 }
 
-.teacher-sec__subtitle {
+.newtopline-teacher-sec__subtitle {
   font-weight: 800;
   line-height: 1.5;
   text-align: center;
@@ -17,7 +17,7 @@
   @include responsive-font(33, 25);
 }
 
-.teacher-sec__title {
+.newtopline-teacher-sec__title {
   font-size: 45px;
   font-weight: 800;
   text-align: center;
@@ -26,7 +26,7 @@
   @include responsive-font(45, 35);
 }
 
-.teacher-sec__item {
+.newtopline-teacher-sec__item {
   display: flex;
 
   @include max(1000) {
@@ -34,7 +34,7 @@
   }
 }
 
-.teacher-sec__pic {
+.newtopline-teacher-sec__pic {
   width: 50%;
   padding-right: 30px;
 
@@ -52,7 +52,7 @@
   }
 }
 
-.teacher-sec__info {
+.newtopline-teacher-sec__info {
   width: 50%;
   padding-top: 15px;
 
@@ -61,7 +61,7 @@
   }
 }
 
-.teacher-sec__info-list {
+.newtopline-teacher-sec__info-list {
   margin: 0 0 22px 0;
   padding: 0;
   li {
@@ -90,7 +90,7 @@
   }
 }
 
-.teacher-sec__info-blockquote {
+.newtopline-teacher-sec__info-blockquote {
   padding-left: 30px;
   background-image: url('../img/blockquote.png');
   background-repeat: no-repeat;
@@ -106,11 +106,11 @@
 }
 
 //begin #HIDDEN
-.teacher-sec__item-hidden {
+.newtopline-teacher-sec__item-hidden {
   display: none;
 }
 
-.teacher-sec__item-hidden-inn {
+.newtopline-teacher-sec__item-hidden-inn {
   display: flex;
   padding-top: 70px;
 
@@ -120,7 +120,7 @@
   }
 }
 
-.teacher-sec__item-hidden-text {
+.newtopline-teacher-sec__item-hidden-text {
   width: 50%;
 
   @include max(1000) {
@@ -161,26 +161,26 @@
 //end #HIDDEN
 
 //begin #FOOTER
-.teacher-sec__footer {
+.newtopline-teacher-sec__footer {
   position: relative;
   height: 200px;
 
   @include max(1000) {
     height: 100px;
   }
-  &.active {
-    .teacher-sec__footer-open {
+  &.newtopline-active {
+    .newtopline-teacher-sec__footer-open {
       pointer-events: none;
       opacity: 0;
     }
-    .teacher-sec__footer-close {
+    .newtopline-teacher-sec__footer-close {
       pointer-events: auto;
       opacity: 1;
     }
   }
 }
 
-.teacher-sec__footer-open {
+.newtopline-teacher-sec__footer-open {
   position: absolute;
   top: 0;
   right: 0;
@@ -208,7 +208,7 @@
   }
 }
 
-.teacher-sec__footer-close {
+.newtopline-teacher-sec__footer-close {
   position: absolute;
   top: 0;
   right: 0;
