--- a/src/style/sections/_why-section.scss
+++ b/src/style/sections/_why-section.scss
@@ -1,4 +1,4 @@
-.why-sec {
+.newtopline-why-sec {
   position: relative;
   padding-top: 65px;
   padding-bottom: 65px;
@@ -7,7 +7,7 @@
   background-position: 50% 100%;
 }
 
-.why-sec__title {
+.newtopline-why-sec__title {
   margin-bottom: 65px;
   text-align: center;
   span {
@@ -16,7 +16,7 @@
 }
 
 //begin #DIAGRAM
-.why-sec__diagram {
+.newtopline-why-sec__diagram {
   display: flex;
   margin-bottom: 92px;
 
@@ -26,21 +26,21 @@
   }
 }
 
-.why-sec__diagram--last {
+.newtopline-why-sec__diagram--last {
   margin-bottom: 77px;
 
   @include max(1000) {
     margin-bottom: 50px;
   }
-  .why-sec__diagram-info {
+  .newtopline-why-sec__diagram-info {
     padding-top: 0;
   }
-  .why-sec__diagram-title {
+  .newtopline-why-sec__diagram-title {
     max-width: 320px;
   }
 }
 
-.why-sec__diagram-pic {
+.newtopline-why-sec__diagram-pic {
   display: flex;
   justify-content: flex-end;
   align-items: flex-start;
@@ -58,7 +58,7 @@
   }
 }
 
-.why-sec__diagram-comb {
+.newtopline-why-sec__diagram-comb {
   width: 50%;
 
   @include max(1000) {
@@ -66,7 +66,7 @@
   }
 }
 
-.why-sec__diagram-comb-row {
+.newtopline-why-sec__diagram-comb-row {
   display: flex;
   align-items: center;
   padding: 22px 0;
@@ -76,7 +76,7 @@
   }
 }
 
-.why-sec__diagram-comb-img {
+.newtopline-why-sec__diagram-comb-img {
   width: 50%;
   padding-right: 15px;
 
@@ -94,7 +94,7 @@
   }
 }
 
-.why-sec__diagram-comb-text {
+.newtopline-why-sec__diagram-comb-text {
   width: 50%;
   padding-right: 40px;
 
@@ -117,7 +117,7 @@
   }
 }
 
-.why-sec__diagram-info {
+.newtopline-why-sec__diagram-info {
   width: 50%;
   padding-top: 20px;
 
@@ -127,7 +127,7 @@
   }
 }
 
-.why-sec__diagram-title {
+.newtopline-why-sec__diagram-title {
   font-size: 20px;
   font-weight: 800;
   line-height: 1.5;
@@ -141,7 +141,7 @@
   }
 }
 
-.why-sec__diagram-text {
+.newtopline-why-sec__diagram-text {
   font-size: 15px;
   font-weight: 300;
   line-height: 1.67;
@@ -161,7 +161,7 @@
 //end #DIAGRAM
 
 //begin #BLOCKQUOTE
-.why-sec__blockquote {
+.newtopline-why-sec__blockquote {
   position: relative;
   display: flex;
   justify-content: center;
@@ -218,7 +218,7 @@
 
 //end #BLOCKQUOTE
 
-.why-sec__footer {
+.newtopline-why-sec__footer {
   display: flex;
   justify-content: center;
   padding-bottom: 62px;
@@ -228,7 +228,7 @@
   }
 }
 
-.why-sec__btn {
+.newtopline-why-sec__btn {
   width: 100%;
   max-width: 350px;
 }
